force-app/main/default/objects/inspire1__User_Portfolio_Project__c/inspire1__User_Portfolio_Project__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner -  Captures project specific attributes related to a portfolio.</description>
    <label>User Portfolio Project</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>User Portfolio Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Portfolio Project</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>