force-app/main/default/objects/inspire1__User_Portfolio_Project__c/fields/inspire1__Color__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Color__c</fullName>
    <label>Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>