force-app/main/default/objects/inspire1__User_Portfolio_Project__c/fields/inspire1__Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>User Portfolio Project</relationshipLabel>
    <relationshipName>User_Portfolio_Project</relationshipName>
    <type>Lookup</type>
</CustomField>