force-app/main/default/objects/inspire1__User_Portfolio_Project__c/fields/inspire1__Project_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Portfolio__c</fullName>
    <description>Portfolio this record belongs to.</description>
    <label>Project Portfolio</label>
    <referenceTo>inspire1__Project_Portfolio__c</referenceTo>
    <relationshipLabel>User Portfolio Project</relationshipLabel>
    <relationshipName>User_Portfolio_Project</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>