force-app/main/default/objects/inspire1__User_Portfolio_Project__c/fields/inspire1__RowNumber__c.field-meta.xml
<CustomField>
    <fullName>inspire1__RowNumber__c</fullName>
    <label>Row Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>